fix can not get file after deploy